fix : dark mode title color 수정

--- a/assets/scss/template.scss
+++ b/assets/scss/template.scss
@@ -278,6 +278,10 @@ ul.network-icon .big-icon {
   margin: 15px 15px 5px;
 }
 
+.dark .card-title {
+  color: #bbdefb;
+}
+
 .card-text {
   font-size: 0.9rem;
   color: #666;
@@ -358,7 +362,7 @@ ul.network-icon .big-icon {
 }
 
 .dark .card-title-2 a {
-  color: white; 
+  color: #bbdefb; 
 }
 
 .card-subtitle-2 {
